--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,9 @@ dependencies:
   equatable: ^2.0.5
   flutter_bloc: ^8.1.3
 
+  pokemon:
+    path: repositories/pokemon
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
