--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   equatable: ^2.0.5
   flutter_bloc: ^8.1.3
+  mocktail: ^0.3.0
+  bloc_test: ^9.1.3
 
   pokemon:
     path: repositories/pokemon
