--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   mocktail: ^0.3.0
   bloc_test: ^9.1.3
-  cached_network_image: ^3.2.3
+  expandable_bottom_sheet: ^1.1.1+1
 
   pokemon:
     path: repositories/pokemon
