--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ flutter:
     - assets/gen1/
     - assets/pokedex.png
     - assets/arrow.png
+    - assets/pokedex-lower.png
+    - assets/pokedex-upper.png
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
